feat(decorated-window): replace JNA/Unsafe with Objective-C JNI bridge
Replace JNA + sun.misc.Unsafe + heavy reflection with a small native
Objective-C dylib (~30 lines) that calls NSWindow delegate methods
directly via JNI. This fixes ProGuard compatibility — JNA Library
interfaces, Foundation bridge, and the Unsafe hack were all sensitive
to obfuscation/optimization.

Changes:
- Add NucleusMacBridge.m (ObjC JNI) + build.sh for universal dylib
- Add NativeMacBridge.kt to load the dylib from JAR or system path
- Rewrite MacUtil.kt: standard setAccessible reflection + JNI calls
- Remove 5 JNA/Unsafe files (Foundation, FoundationLibrary, ID,
  JnaLoader, UnsafeAccessing)
- Remove JNA dependencies from build.gradle.kts and libs.versions.toml
- Broaden JBR API ProGuard rules to keep all com.jetbrains.** classes
  (fixes broken WindowDecorations proxy when jbr-api is implementation)
- Add JNI keep rule for NativeMacBridge native methods
- Remove jdk.unsupported module from example (no longer needed)